samples/_failures_safe/1761468773_ccb2a3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e567afc5.c: In function ‘main’:
./samples/SAFE/__tmp_e567afc5.c:154:17: error: expected declaration or statement at end of input
  154 |                 if (add_matrices(&mat1, &mat2, &result)) {
      |                 ^~
./samples/SAFE/__tmp_e567afc5.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e567afc5.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e567afc5.c:154:17: error: expected declaration or statement at end of input
